--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -1,5 +1,12 @@
+body, html{
+  width: 100%;
+  height: 100%;
+  background-color: red;
+}
+
 #container {
   with:100%;
+  background: #000000;
   height: 100%;
   position: relative;
   @include display(flex);
@@ -8,9 +15,12 @@
   @include justify-content(center);
 }
 
+#GameCanvas{
+  border: 2px solid white;
+}
+
 #message {
   font-family: $helvetica;
   font-size: 75px;
-  color: #ffffff;
   @include align-self(flex-center);
 }
