--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,3 +5,4 @@ block body
             | Sorry,
             strong CANVAS
             |  is not supported by your browser. Get a more recent one to play my game!
+        h1 GAME OVER
