--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,3 +6,6 @@ block body
             strong CANVAS
             |  is not supported by your browser. Get a more recent one to play my game!
         h1 GAME OVER
+    .fog
+    p SCORE
+    h2 0
