--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -7,5 +7,6 @@ block body
             |  is not supported by your browser. Get a more recent one to play my game!
         h1 GAME OVER
     .fog
-    p SCORE
-    h2 0
+    //p SCORE
+    //h2 0
+    //.timer
