--- a/app/styles/pages/_home.scss
+++ b/app/styles/pages/_home.scss
@@ -2,6 +2,8 @@ body, html{
   width: 100%;
   height: 100%;
   background-color: #121421;
+  font-family: sans-serif;
+  color: #ffffff;
 }
 
 div{
@@ -33,7 +35,6 @@ div{
 
 h1{
   font-size: 36px;
-  color: white;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -43,14 +44,11 @@ h1{
   left: 0;
   right: 0;
   display: none;
-  font-family: sans-serif;
 }
 
 h2{
   font-size: 30px;
   display: block;
-  color: white;
-  font-family: sans-serif;
   position: absolute;
   left: 0;
   right: 0;
@@ -60,12 +58,17 @@ h2{
   width: 750px;
   height: 550px;
 }
+.timer{
+  width: 200px;
+  height: 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+}
 
 p{
   width: 800px;
   margin: auto;
-  color: white;
-  font-family: sans-serif;
   position: absolute;
   left: 0;
   top: 5%;
